# SparkInternals

./: .gitignore  README.md  pom.xml  pyproject.toml
Spark_Theory/: 01_SparkCoreConcept.md  01_SparkJobExecutionOverview.md  02_SparkJobLogicalPlan.md  02_SparkSessionAndContext.md  03_SparkJobPhysicalPlan.md  05_SparkSessionAndContext.md  06_SparkClosureFunction.md  07_SparkMemoryManagement.md  SparkLogicalPlan.md  SparkRDDPhysicalPlan.md
Spark_Web_UI/: 02.Understand_dag.ipynb  Introduction.md
notebooks/: spark_hadoop_fs_conf.ipynb  spark_session_optimization.ipynb  word_count.ipynb
notebooks/.ipynb_checkpoints/: word_count-checkpoint.ipynb
src/main/java/org.pengfei.example/: Closure.scala  WordCount.scala
